# M-Eyes

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  README.md  docker-compose.yml  mkdocs.yml  package-lock.json  package.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_infoblox_features.py  0003_certificates.py  0004_nextgen_ddi.py  0005_enterprise.py  0006_advanced_dns_dhcp.py
backend/app/: config.py  database.py  main.py  security.py
backend/app/api/: deps.py
backend/app/feeds/: router.py
backend/app/generators/: __init__.py  kea_conf.py  named_conf.py  rpz_zone.py  runbook.py  zonefile.py
backend/app/models/: __init__.py  apikey.py  asset.py  audit.py  automation.py  base.py  cert.py  dhcp.py  dns.py  events.py  extattr.py  feed.py  host.py  integration.py  ipam.py  rpz.py  sso.py  threatfeed.py  user.py
backend/app/schemas/: apikey.py  asset.py  auth.py  automation.py  cert.py  common.py  dhcp.py  dns.py  extattr.py  feed.py  host.py  integration.py  ipam.py  rpz.py  (+3 more)
backend/tests/: conftest.py  test_advanced_config.py  test_apikeys.py  test_assets.py  test_auth.py  test_automation.py  test_backup.py  test_certs.py  test_changelog.py  test_deploy.py  test_dhcp.py  test_discovery.py  test_dns.py  test_events.py  test_extattrs.py  test_feeds.py  test_host.py  test_integrations.py  test_ipam.py  test_leases.py  test_next_subnet.py  test_rpz.py  test_search.py  test_sso.py  test_system_status.py  test_threat_feeds.py  test_update.py  test_users_rbac.py  test_views.py  test_zone_roles.py
(+163 files in other folders)
