[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "m-eyes"
version = "1.3.1"
description = "M-Eyes - an open-source DDI (DNS, DHCP, IPAM) platform with Fortinet ecosystem integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
    "bcrypt>=4.1",
    "PyJWT>=2.8",
    "cryptography>=42.0",
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.j2"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
